[diem_ngap] report timeline ngap
